--- a/Bag of N-Gram Document Classification.ipynb
+++ b/Bag of N-Gram Document Classification.ipynb
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,6 +647,23 @@
     "plt.title('Learning Rate: Fixed vs Annealing')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Acc 83.62\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Test Acc {}\".format(test_model(test_loader, model)))"
    ]
   }
  ],
