--- a/Bag of N-Gram Document Classification.ipynb
+++ b/Bag of N-Gram Document Classification.ipynb
@@ -432,25 +432,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[  11,   18,  163,  ...,    0,    0,    0],\n",
-      "        [ 406,   13,    1,  ...,    0,    0,    0],\n",
-      "        [  10, 5639,   12,  ...,    0,    0,    0],\n",
+      "tensor([[  10,  144,    1,  ...,    0,    0,    0],\n",
+      "        [   2,    1,  628,  ...,    0,    0,    0],\n",
+      "        [  64,    1,   51,  ...,    0,    0,    0],\n",
       "        ...,\n",
-      "        [  42,   14,    3,  ...,    0,    0,    0],\n",
-      "        [   6,   30, 2412,  ...,    0,    0,    0],\n",
-      "        [  10,   44, 1900,  ...,    0,    0,    0]])\n",
-      "tensor([ 595,  851,  119,  567,  471,  215,  555, 2399,  707,  575, 1579,  623,\n",
-      "        1083,  967,  455,  811, 1075, 1083,  763, 1203, 1879, 1455, 1423,  703,\n",
-      "        1091,  575, 2459, 1147,  523,  959,  903, 1531])\n",
-      "tensor([0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1,\n",
-      "        0, 1, 1, 0, 0, 0, 1, 1])\n"
+      "        [  11,   18, 7724,  ...,    0,    0,    0],\n",
+      "        [  11,  533,   17,  ...,    0,    0,    0],\n",
+      "        [   1,  548,   10,  ...,    0,    0,    0]])\n",
+      "tensor([ 439,  187, 3419,  463,  427,  987,  735,  623,  403,  499, 1099,  579,\n",
+      "        1595,  815, 1535, 2007,  559,  587, 2243, 1131,  763,  555,  631, 1691,\n",
+      "         163, 3087,  519, 1027, 1911, 2375,  479,  351,  511,  451,  667,  567,\n",
+      "         751,  527, 2363,  911, 1011,  827,  507,  587, 2451,  891,  967, 2135,\n",
+      "        1691, 2275,  759, 1787,  555,  979,  455, 1963, 1187,  555,  675,  699,\n",
+      "        1347,  499,  483,  443,  659,  863,  919,  583, 1275, 1895, 1403,  447,\n",
+      "         811,  623,  971,  671,  455,  287,  495, 1359,  803, 1023,  667,  255,\n",
+      "         675,  419,  911,  175,  971, 3103, 2471,  719,  651,  843, 1059,  547,\n",
+      "         411,  471,  447, 1343])\n",
+      "tensor([1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+      "        1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0,\n",
+      "        1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1,\n",
+      "        1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0,\n",
+      "        1, 1, 1, 0])\n"
      ]
     }
    ],
@@ -511,7 +520,7 @@
     "#val_loader = NewsGroupDataset(val_data_indices, val_targets)\n",
     "#test_loader = NewsGroupDataset(test_data_indices, test_targets)\n",
     "\n",
-    "BATCH_SIZE = 32\n",
+    "BATCH_SIZE = 100\n",
     "train_dataset = NewsGroupDataset(train_data_indices, train_targets)\n",
     "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, \n",
     "                                           batch_size=BATCH_SIZE,\n",
@@ -522,7 +531,7 @@
     "val_loader = torch.utils.data.DataLoader(dataset=val_dataset, \n",
     "                                           batch_size=BATCH_SIZE,\n",
     "                                           collate_fn=newsgroup_collate_func,\n",
-    "                                           shuffle=True)\n",
+    "                                           shuffle=False)\n",
     "\n",
     "test_dataset = NewsGroupDataset(test_data_indices, test_targets)\n",
     "test_loader = torch.utils.data.DataLoader(dataset=test_dataset, \n",
@@ -734,6 +743,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step_ = []\n",
+    "for i in range(len(val_acc_l_LR_10epc)):\n",
+    "    step_.append(1+50*(i+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 203,
    "metadata": {},
    "outputs": [
@@ -751,48 +771,6 @@
    "source": [
     "max(val_acc_l_LR_dic1000), max(val_acc_l_LR_dic10000), max(val_acc_l_LR_dic20000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "step_ = []\n",
-    "for i in range(len(val_acc_l_LR_10epc)):\n",
-    "    step_.append(1+50*(i+1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 287,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Acc 83.62\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (\"Test Acc {}\".format(test_model(test_loader, model)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1126,6 +1104,132 @@
     "plt.title('Training Curve: N-grams')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test Accurary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Acc 88.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Test Acc {}\".format(test_model(test_loader, model)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Error Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function for generate samples the model\n",
+    "def generate_samples_results(loader, model):\n",
+    "    \"\"\"\n",
+    "    Help function that tests the model's performance on a dataset\n",
+    "    @param: loader - data loader for the dataset to test against\n",
+    "    \"\"\"\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    correct_sample = []\n",
+    "    incorrect_sample = []\n",
+    "    model.eval()\n",
+    "    for data, lengths, labels in loader:\n",
+    "        data_batch, length_batch, label_batch = data, lengths, labels\n",
+    "        outputs = F.softmax(model(data_batch, length_batch), dim=1)\n",
+    "        predicted = outputs.max(1, keepdim=True)[1]\n",
+    "        for i, pred in enumerate(predicted): \n",
+    "            if pred == label_batch[i]:\n",
+    "                correct_sample.append((val_data[i],pred,val_targets[i]))\n",
+    "            else:\n",
+    "                incorrect_sample.append((val_data[i],pred,val_targets[i]))\n",
+    "        break\n",
+    "    return correct_sample, incorrect_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct_sample, incorrect_sample = generate_samples_results(val_loader, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(\"there are enough sad stories about women and their oppression by religious political and societal means not to diminish the films and stories about genital mutilation and reproductive rights as well as wage inequality and marginalization in society all in the name of allah or god or some other ridiculous justification but sometimes it is helpful to just take another approach and shed some light on the subject the setting is the 2006 match between iran and bahrain to qualify for the world cup passions are high and several women try to disguise themselves as men to get into the match the women who were caught played by sima mobarakshahi shayesteh irani ayda sadeqi golnaz farmani and mahnaz zabihi and detained for prosecution provided a funny and illuminating glimpse into the customs of this country and most likely all muslim countries their interaction with the iranian soldiers who were guarding and transporting them both city and villagers and the father who was looking for his daughter provided some hilarious moments as we thought about why they have such unwritten rules it is mainly about a paternalistic society that feels it has to save it's women from the crude behavior of it's men rather than educating the male population they deny privilege and rights to the women seeing the changes in the soldiers responsible and the reflection of iranian society it is nos surprise this film will not get any play in iran but jafar panahi has a winner on his hands for those able to see it\",\n",
+       "  tensor([1]),\n",
+       "  1),\n",
+       " (\"moonstruck is a lovely little film directed by superb story teller norman jewison in the heat of the night fiddler on the roof the hurricane the film is great on many levels it shows a good slice of italian culture has a touching romance and best of all is a hilarious comedy one thing i liked most about the film was the relative unconventional looks of the actors nicolas cage looks positively odd for most of the film and cher well cher always looks a little odd overall it's a fun film and easy to recommend 74 out of 10\",\n",
+       "  tensor([1]),\n",
+       "  1),\n",
+       " (\"i think i truly love this film prix de beaute was originally a silent film but later dubbed into french in 1930 despite having someone else's voice dubbed over hers this remains a stunning tour de force for louis brooks the fact that her singing voice is dubbed by the legendary edith piaf helps to mollify us purists about the dubbing deception  this is the story of lulu and we first see her at a resort with her macho boyfriend andre georges charlia and their friend antonin augusto bandini lulu enters the frame as a pair of legs we see her inside the car changing into her bathing costume lulu is very free with showing off her body and this does not sit well with the irksome andre when lulu considers applying for the title of 'miss europe' we know that a happy ending is not going to be sitting at the end of easy street  the film seems to focus a lot on men ogling beautiful women we see plenty of bathing beauties and the reactions of the men staring at them but at the center of it all is the magnificent louise brooks  if you don't mind watching films from the bygone eras then consider checking out this one louise brooks is not a name that most average movie buffs may readily know but as soon as you see her you will be mesmerised and you'll want to know more also check her out in 'pandora's box' if you can find it be wary of the us kino dvd release i don't know if their projection speed is correct a lot of the scenes appear to be shown at too fast a speed this may have been the way they were shot i don't know but since it's the only way to see this film it's worth swallowing that one minor bitter pill\",\n",
+       "  tensor([1]),\n",
+       "  1)]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correct_sample[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a series of shorts spoofing dumb tv shows groove tube hits and misses a lot overall i do really like this movie unfortunately a couple of the segments are totally boring a few really great clips make up for this a predecessor to such classics like kentucky fried movie',\n",
+       "  tensor([0]),\n",
+       "  1),\n",
+       " (\"i love ghost stories in general but i particularly love chilly atmospheric and elegantly creepy british periodstyle ghost stories this one qualifies on all counts a naive young lawyer solicitor in britspeak is sent to a small village near the seaside to settle an elderly deceased woman's estate it's the 1920s a time when many middleclass brits go to the seaside on vacation for their health well guess what there's nothing healthy about the village of crythin gifford the creepy site of the elderly woman's hulking brooding victorian estate which is located on the fringes of a fogswathed salt marsh when the lawyer saves the life of a small girl none of the locals will help the endangered tot you find out why later on in the film he inadvertently incurs the wrath of a malevolent spirit the woman in black she is no filmy gauzy wraith but a solid black silhouette of malice and evil the viewer only sees her a few times but you feel her malevolent presence in every frame as the camera creeps up on the lawyer while he's reading through legal papers you expect to see the woman in black at any moment when the lawyer goes out to the generator shed to turn on the electricity for the creepy old house the camera snakes in on him and you think she'll pop up there too waiting for the woman in black to show up is nailbitingly suspenseful we've seen many elements of this story beforethe locked room that no one enters the fog the naive outsider who ignores the locals' warnings but the director somehow manages to combine them all into a completely newseeming and compelling ghost story watch it with a buddy so you can have someone warm to grab onto while waiting for the woman in black \",\n",
+       "  tensor([0]),\n",
+       "  1),\n",
+       " ('sunny a cocktail waitress in the dc area is a bit dim to put in mildly she drives an old clunker and rents a tiny room from a gay male couple however she saves the life of a prominent arab by taking a bullet in the behind that was meant for the official she charms the national press with her zany remarks and her sweet looks sniffing an opportunity presidential aides get her installed in the protocol department for the us government even then she messes things up at times but she tries hard and learns a lot she even grabs the romantic attention of a state department official but is there another sinister plot in the making involving an arab man who wishes to take another wife a blonde one lol lol lol this movie features goldie as pretty as a picture and as dumb as a fox as they say sunny learns her way around the jungle of the us government very very well she even has important things to say about honesty and the lack of it in her protocol surroundings perhaps the arab community would be less than thrilled with this work but for those who like to laugh rent this today',\n",
+       "  tensor([0]),\n",
+       "  1)]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "incorrect_sample[-3:]"
    ]
   }
  ],
